Implement lombok + Cleanup